@startuml



class Article {
- id : int
- titre : string
- contenu : text
- createAt : datetime
- slug : string
- isPublie : bool
}

class Categorie {
- id : int
- titre  :string
- slug : string
}

class Utilisateur {
- id : int
- prenom : string
- nom : string
- pseudo : string
}

class Commentaire {
- id : int
- contenu : text
- createAt : datetime
}

class Contact {
- id : int
- nom : string
- prenom : string
- email : string
- objet : string
- contenu : text
- createAt : datetime
}


Article "0..*" -- "0..1" Categorie
Article "1..1" -- "0..*" Commentaire
Utilisateur "0..1" -- "0..*" Commentaire


@enduml